; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/mips/extr_db_trace.c_db_show_mdpcpu.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/mips/extr_db_trace.c_db_show_mdpcpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcpu = type { i32, i32, i32 }

@.str = private unnamed_addr constant [21 x i8] c"ipis         = 0x%x\0A\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"next ASID    = %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [19 x i8] c"GENID        = %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @db_show_mdpcpu(%struct.pcpu* %0) #0 {
  %2 = alloca %struct.pcpu*, align 8
  store %struct.pcpu* %0, %struct.pcpu** %2, align 8
  %3 = load %struct.pcpu*, %struct.pcpu** %2, align 8
  %4 = getelementptr inbounds %struct.pcpu, %struct.pcpu* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @db_printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %5)
  %7 = load %struct.pcpu*, %struct.pcpu** %2, align 8
  %8 = getelementptr inbounds %struct.pcpu, %struct.pcpu* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @db_printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i32 %9)
  %11 = load %struct.pcpu*, %struct.pcpu** %2, align 8
  %12 = getelementptr inbounds %struct.pcpu, %struct.pcpu* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @db_printf(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.2, i64 0, i64 0), i32 %13)
  ret void
}

declare dso_local i32 @db_printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
